--- a/bibliography.bib
+++ b/bibliography.bib
@@ -58,6 +58,11 @@
   url = "https://www.openmp.org/",
   urldate = "2019-03-16",
 }
+@online{sysmakeshift:github,
+  title = "Sysmakeshift Github / Thread Squad",
+  url = "https://github.com/mbeutel/sysmakeshift/blob/master/include/sysmakeshift/thread_squad.hpp",
+  urldate = "2020-02-14",
+}
 @book{protbb2019,
   author       = {Michael Voss and Rafael Asenjo and James Reinders},
   title        = {Pro TBB: C++ Parallel Programming with Threading Building Blocks},
