--- a/content/c3sr-benchmarks.tex
+++ b/content/c3sr-benchmarks.tex
@@ -395,7 +395,7 @@
 
     %In summary, the C3SR format's storage scheme has shown to be stable to small perturbations. ...
 
-  \section{MVM}
+  \section{Matrix-Vector Multiplication with Fully Structured Matrices} \label{sec:mvm-structured}
 
   \Todo{Benchmark für kleinere Gitter (10 - 100) um Abklingen des Geschwindigkeitsunterschied von SIMD zu CSR zu
   zeigen.}
