--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -6,7 +6,7 @@
 \usepackage[backend=biber, alldates=iso]{biblatex}
   \addbibresource{bibliography.bib}
 \usepackage{blindtext}
-\usepackage{enumitem} % description alignment
+\usepackage{enumitem} % itemize alignment
 \usepackage{caption}
 \usepackage{float}
 \usepackage[T1]{fontenc}
@@ -108,6 +108,7 @@
   \todo{Figure-Style überall anpassen}
   \todo{value's array vs value array}
   \todo{peg index vs peg-index}
+  \todo{Zweitkorrektor erwähnen}
   \todos
 
 \end{document}
