--- a/content/c3sr-c3sr.tex
+++ b/content/c3sr-c3sr.tex
@@ -1,4 +1,4 @@
-\chapter{3-Fold Compressed Sparse Row Matrix Storage Format}
+\chapter{Threefold Compressed Sparse Row Matrix Storage Format}
 
   Evidently, representing a sparse banded matrix using the regular CSR format is suboptimal, as it provides no means of
   capturing the apparent repetitiveness of the structure. While at first glance the diagonal format might seem an
