--- a/content/c3sr-outlook.tex
+++ b/content/c3sr-outlook.tex
@@ -16,3 +16,5 @@ potential für Zukunft und Systeme mit großen Caches -> KNL}
 Objekt total aufblähen, falls RLE verwendet wird}.
 
 \Todo{RLI-Iterator könnte auch Wert direkt speicher. Weniger Rechenaufwand. Testen?}
+
+Größere Gitte Domänen verwenden -> Syncoverhead relative kleiner
