--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -76,7 +76,7 @@
   \tableofcontents
   \listoffigures
 
-  \part{3-Fold Compressed Sparse Row Matrix Storage Format}
+  \part{Threefold Compressed Sparse Row Matrix Storage Format}
 
     \input{content/c3sr-intro.tex}
     \input{content/c3sr-c3sr.tex}
