--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -109,6 +109,7 @@
   \todo{value's array vs value array}
   \todo{peg index vs peg-index}
   \todo{Zweitkorrektor erwähnen}
+  \todo{Grid Edge Size $d$ auf Plots einheitlichas;j}
   \todos
 
 \end{document}
